# asun

./: .gitignore  .gitmodules  AGENTS.md  README.md  README_CN.md  submit.sh  todo.md
.github/workflows/: deploy-website.yml
ason-c/tests/: ason_test.c
ason-cpp/tests/: ason_test.cpp
ason-csharp/: README.md  README_CN.md
ason-dart/: README.md  README_CN.md
ason-dart/example/: bench.dart
ason-dart/lib/src/: decode.dart
ason-go/: README.md  README_CN.md  ason_test.go  go.mod
ason-go/examples/basic/: main.go
ason-go/examples/bench/: main.go
ason-go/examples/complex/: main.go
ason-go/examples/cross_compat/: main.go
ason-java/src/test/java/io/ason/: AsonTest.java
ason-js/tests/: ason.test.ts
ason-py/tests/: test_ason.py
ason-rs/tests/: format_validate_test.rs
ason-zig/tests/: cross_compat_test.zig
c/: CMakeLists.txt  README.md  README_CN.md
c/examples/: basic.c  bench.c  complex.c
c/include/: ason.h  ason_lexer.h  ason_parser.h  ason_serializer.h  ason_value.h
c/src/: ason.c  ason_lexer.c  ason_parser.c  ason_serializer.c  ason_value.c
c/tests/: ason_test.c  test_lexer.c  test_main.c  test_parser.c  test_serializer.c  test_value.c
cpp/: CMakeLists.txt  README.md  README_CN.md
cpp/examples/: basic.cpp  bench.cpp  complex.cpp
cpp/include/: ason.hpp
cpp/include/ason/: ason.hpp  error.hpp  lexer.hpp  parser.hpp  serializer.hpp  value.hpp
cpp/src/: lexer.cpp  parser.cpp  serializer.cpp  value.cpp
cpp/tests/: ason_test.cpp  test_lexer.cpp  test_parser.cpp  test_serializer.cpp  test_value.cpp
docs/: ASON_SPEC.md  ASON_SPEC_CN.md  PUBLISH_GUIDE_CN.md  SPEC.md  SPEC_CN.md  cross_language_compat_matrix.md  prompt.md
example/: 10MB_Cumulative { 1 } Level Minified Versions.asun  10MB_EAFC26 Men { 1 } Level Minified Versions.asun  1MB_Crypto Historical 365 Days { 1 } Level Minified Versions.ason  1MB_Crypto Historical 365 Days { 1 } Level Minified Versions.asun  README.md
go/: README.md  README_CN.md  ason_test.go  bin_test.go  decode.go  decode_bin.go  encode.go  encode_bin.go  encode_pretty.go
go/examples/basic/: main.go
go/examples/bench/: main.go
go/examples/complex/: main.go
java/src/main/java/io/ason/: Ason.java
java/src/test/java/io/ason/: AsonTest.java
js-format/: README.md  build.mjs  package-lock.json  package.json  tsconfig.json
js-format/examples/: demo.html
js-format/src/: ason-format.css  index.ts
lsp/: build.zig.zon
lsp/src/: features.zig  lexer.zig  main.zig  wasm.zig
lsp/tests/: lsp_test.zig
python/: README.md  README_CN.md  ason.py  test_ason.py
python/examples/: basic.py  complex.py
rust/: Cargo.toml  README.md  README_CN.md
rust/examples/: bench.rs
rust/src/: decode.rs  encode.rs  lib.rs
rust/tests/: format_validate_test.rs
samples/: 01_simple_object.asun  02_object_array.asun  03_nested_schema.asun  04_array_of_nested_objects.asun  05_kv_object_array.asun  06_nested_entry_objects.asun  07_nulls_and_empty_slots.asun  08_mixed_nested_structures.asun  09_strings_and_escaping.asun  10_ultra_complex_deployment.asun
scripts/: batch-tag-languages.sh  branchs.sh  pull-submodules.sh  push-submodules.sh  push-tags.sh  submodule.sh
tools/ason-lsp/: .gitignore  features.go  go.mod
tools/ason-zig-lsp/: build.zig
tools/ason-zig-lsp/src/: analyzer.zig  features.zig  lexer.zig  parser.zig  server.zig
tools/ason-zig-lsp/tests/: lsp_test.zig
tools/vscode_plugin/: LICENSE  language-configuration.json  package-lock.json  package.json
tools/vscode_plugin/preview/: ason-preview.js
tools/vscode_plugin/scripts/: build.sh
tools/vscode_plugin/src/: extension.ts
tools/vscode_plugin/syntaxes/: ason.markdown.tmLanguage.json
tools/vscode_plugins/: .vscodeignore  README.md  package.json
tools/vscode_plugins/scripts/: build.sh
tools/vscode_plugins/src/: extension.ts
tools/vscode_plugins/syntaxes/: ason.tmLanguage.json
zig/examples/: basic.zig  bench.zig  complex.zig
zig/src/: ason.zig
